--- a/lib/data.test/expected-script.html
+++ b/lib/data.test/expected-script.html
@@ -1,8 +1,8 @@
 <script>
   window.__splitCachePreload = {
-    splitsJSON: '',
-    splitsChangeNumber: 1,
-    segments: '',
-    splitsUsingSegments: 2
+    "splitsJSON":'[{"status":"bar"},{"status":"baz"}]',
+    "since": 1,
+    "segmentsData": '[{"name":"test-segment","added":["foo","bar"]}]',
+    "usingSegmentsCount": 2
   }
 </script>
